Updated the gem file to avoid security vulnerabilities

--- a/app/views/bottles/index.html.erb
+++ b/app/views/bottles/index.html.erb
@@ -8,4 +8,4 @@
 
 
 <%= link_to "Add A Bottle", new_bottle_path %>
-<%= link_to "Log Out", destroy_user_session_path %>
+<%=link_to("Sign Out", destroy_user_session_path, :method => 'delete') %>
